Remove one post

--- a/_posts/2016-11-16-subbox.markdown
+++ b/_posts/2016-11-16-subbox.markdown
@@ -7,6 +7,6 @@ alt: image-alt
 project-date: April 2014
 category: Android Development
 skill: Java, Android SDK, SQLite
-description: This is a mock up E-commerce app that with shopping cart and transaction history. <a href="https://github.com/joelimyx/SubBox"><img src="https://s-media-cache-ak0.pinimg.com/736x/2c/b6/70/2cb670b6ddd8922a1c1b2fee4f6f758c.jpg" height=100px/></a>
+description: This is a mock up E-commerce app with shopping cart and transaction history. <a href="https://github.com/joelimyx/SubBox"><img src="https://s-media-cache-ak0.pinimg.com/736x/2c/b6/70/2cb670b6ddd8922a1c1b2fee4f6f758c.jpg" height=100px/></a>
 
 ---
